<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Script Runner for Termux</string>
    <string name="bridge_folder_name" translatable="false">TermuxRunnerBridge</string>
    <string name="language_label">Language</string>

    <!-- Settings -->
    <string name="settings_title">Settings</string>
    <string name="back_description">Back</string>
    <string name="appearance_label">Appearance</string>
    <string name="dynamic_color_title">Dynamic Color</string>
    <string name="dynamic_color_subtitle">Use system wallpaper colors</string>
    <string name="data_management_label">Data Management</string>
    <string name="import_label">Import (json)</string>
    <string name="export_label">Export (json)</string>
...
    <string name="script_output_duration">Duration</string>
    <string name="script_output_stdout_tab">Output</string>
    <string name="script_output_stderr_tab">Errors</string>
    <string name="script_output_no_output">No output available</string>
    <string name="script_output_copy">Copy output</string>
    <string name="script_output_copied">Copied!</string>
    <string name="templates_nav">Templates</string>
    <string name="templates_title">Templates Library</string>
    <string name="template_search_placeholder">Search templates...</string>
    <string name="template_no_results">No templates found matching your search</string>
</resources>
