...
        },
        floatingActionButton = {
            FloatingActionButton(
                onClick = actions.onAddClick,
                modifier =
                    Modifier
                        .testTag("fab_add_script")
                        .padding(end = 8.dp, bottom = 8.dp),
                containerColor = MaterialTheme.colorScheme.primaryContainer,
                elevation = FloatingActionButtonDefaults.elevation(defaultElevation = 4.dp),
            ) {
                Icon(Icons.Default.Add, stringResource(R.string.cd_add_script))
            }
...
